<resources>
    <string name="app_name">NoteSavior</string>
    <string name="teacher_login">Teacher Login</string>
    <string name="pass">Password</string>
    <string name="user">Username</string>
    <string name="button">Login</string>
    <string name="courseName">Course Name</string>
    <string name="courseCode">Code</string>
    <string name="is_class">Is this your class?</string>
    <string name="y_button">Yes</string>
    <string name="n_button">No</string>
    <string name="newClass">Create a New Class</string>
    <string name="start">Start Time</string>
    <string name="end">End Time</string>
    <string name="finish">Finish</string>
    <string name="create">Create Account</string>
    <string name="picture">Picture</string>
    <string name="description_info">Info</string>
    <string name="request_permission">This sample needs camera permission.</string>
    <string name="camera_error">This device doesn\'t support Camera2 API.</string>
    <string name="intro">Are you a Teacher or Student?</string>
    <string name="teacher">Teacher</string>
    <string name="student">Student</string>
    <string name="welcome">Welcome to NoteSavior</string>>
    <string name="camera">Camera</string>>
    <string name="code">Course Code</string>>
    <string name="stuTitle">Student Login</string>>


</resources>
