<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".StuOrTea">

    <TextView
        android:id="@+id/introTitle"
        android:layout_width="wrap_content"
        android:layout_height="44dp"
        android:layout_marginEnd="4dp"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/welcome"
        android:textAlignment="center"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="32sp"
        android:textStyle="bold"
        android:typeface="normal"
        app:layout_constraintBottom_toTopOf="@+id/teacher"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.53"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.277" />

    <TextView
        android:id="@+id/subIntroTitle"
        android:layout_width="wrap_content"
        android:layout_height="29dp"
        android:layout_marginTop="212dp"
        android:layout_marginEnd="4dp"
        android:text="@string/intro"
        android:textAlignment="center"
        android:textColor="@color/colorPrimary"
        android:textSize="18sp"
        android:textStyle="bold"
        android:typeface="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.514"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/teacher"
        android:layout_width="304dp"
        android:layout_height="52dp"
        android:layout_marginTop="56dp"
        android:background="@color/colorPrimaryDark"
        android:text="@string/teacher"
        android:textColor="@android:color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/subIntroTitle" />

    <Button
        android:id="@+id/student"
        android:layout_width="302dp"
        android:layout_height="55dp"
        android:layout_marginTop="12dp"
        android:background="@color/colorPrimaryDark"
        android:text="@string/student"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/teacher" />


</android.support.constraint.ConstraintLayout>